style.css
body {
  font-family: Arial, Helvetica, sans-serif;
  background: linear-gradient(to bottom, #d6f1fa 0%, rgb(239, 212, 212) 100%);
}

#app {
  width: 100vmax;
  height: 100%;
  margin: auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

footer {
  position: relative;
  bottom: 0;
  width: 100%;
}

h1, h2, h3 {
  margin-bottom: 1rem;
  font-weight: normal;
  text-align: center;
}

#main-nav-bar {
  width: 920px;
  height: 60px;
  background-color: #333;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  border-radius: 22px;
  margin-top: 1em;
  padding: auto;
  word-spacing: 10px;
}

.links-container {
  padding-inline-start: 0;
}

#fixed-button {
  position: sticky;
  bottom: 20px;
  left: 20px;
  width: 180px;
  font-size: medium;
}

.side-nav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1; /* Stay at front of page */
  top: 0;
  left: 0;
  background-color: #111;
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 60px;
  transition: 0.5s;
}

.side-nav .closebutton {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.closebutton {
  font-size: 36px;
  background-color: aliceblue;
  border: none;
  width: 40px;
}

#page-content {
  max-width: 900px;
  padding: 20px;
  transition: margin-left 0.5s;
  justify-content: center;
}


button {
  cursor: pointer;
  display: inline-block;
  background: #333;
  color: white;
  font-size: 18px;
  border: 0;
  padding: 0.7em 2.5em;
  padding-left: 20px;
  padding-right: 20px;
  width: auto;
  min-width: 190px;
}

button:focus {
  outline: none;
}

button:hover {
  background: #00bbd45d;
}

button.selected {
  background: #00bcd4;
}

.vertical-container {
  width: 80vw;
  max-width: 950px;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  flex-wrap: nowrap;
}

.vertical-card {
  width: 240px;
  height: calc(50% - 1rem);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1em;
  margin-bottom: 1rem;
  border-radius: 15px;
  background-color: #fafafa;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
}

.horizontal-container {
  max-width: 800px;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  align-items: center;
  flex-wrap: nowrap;
  margin: 0 auto;
}

.horizontal-card {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  border-radius: 10px;
  margin-top: 10px;
  margin-bottom: 10px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
}

@media screen and (max-width: 600px) {
  /* modify ui for mobile */

  body {
    /* disable horizontal scrolling */
    overflow-x: hidden;
    margin: 0 auto;
  }

  #app {
    width: 95%;
    height: 100%;
  }

  #page-content {
    width: 95%;
  }

  #main-nav-bar {
    width: 100%;
    position: sticky;
    top: 15px;
  }

  button {
    min-width: 60px;
    font-size: 12px;
    padding: 0.7em 2em;
    padding-left: 3px;
    padding-right: 3px;
  }

  .side-nav {
    width: 100%;
    height: 100vh;
    overflow-y: hidden;
    overflow-x: hidden;
  }

  .vertical-container {
    width: 90%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: nowrap;
    margin: 0 auto;
  }

  .vertical-card {
    width: 90%;
  }
  
  .horizontal-container {
    width: 90%;
  }

  .horizontal-card {
    width: 90%;
  }

  #review {
    width: 100%;
  }
}

